<resources>
    <string name="app_name">AD340v2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_text">Enter your name</string>
    <string name="send">Send</string>
    <string name="movie_list">movie </string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="textview">TextView</string>
    <string name="live_cam">Live Cam</string>
    <string name="image">image</string>
    <string name="location">location</string>
    <string name="movie_lists">Movie List</string>
    <string name="about">About</string>
    <string name="setting">Setting</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="submit">Submit</string>
    <string name="traffic_cam">traffic cam</string>
    <string name="locations">locations</string>

</resources>
