<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movielist"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/movie_lists" />
        <item
            android:id="@+id/traffic_cam"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/traffic_cam" />
        <item
            android:id="@+id/locations"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/locations" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/about" />
        <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/setting" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
