<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="MissingConstraints"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="60dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="65dp"
        android:layout_marginStart="10dp"
        android:text="Enter the information below"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/enter_text"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/text"
        android:layout_marginEnd="49dp"
        android:onClick="sendMessage"
        android:text="@string/send" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2">


        <Button
            android:id="@+id/one"
            android:layout_row="0"
            android:onClick="showList"
            android:text="@string/movie_list" />

        <Button
            android:id="@+id/two"
            android:layout_row="0"
            android:onClick="liveCam"
            android:text="@string/live_cam" />

        <Button
            android:id="@+id/three"
            android:layout_row="0"
            android:onClick="location"
            android:text="@string/location" />

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:onClick="about"
            android:text="@string/about" />
    </GridLayout>

</RelativeLayout>